--- a/templates/new/general/index.html
+++ b/templates/new/general/index.html
@@ -1,155 +1,9 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-
-    <title>Finance Business</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="{% static 'assets/css/fontawesome.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/templatemo-finance-business.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
-<!--
-
-Finance Business TemplateMo
-
-https://templatemo.com/tm-545-finance-business
-
--->
-  </head>
-
-  <body>
-
-    <!-- ***** Preloader Start ***** -->
-    <div id="preloader">
-        <div class="jumper">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>  
-    <!-- ***** Preloader End ***** -->
-
-    <!-- Header -->
-    <div class="sub-header">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-xs-12">
-            <ul class="left-info">
-              <li><a href="about.html">About us</a></li>
-              <li><a href="services.html">Our Services</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a></li>
-             
-              <li><a href="#"><i class="fa fa-phone"></i>090-080-0760</a></li>
-      
-             
-      
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <ul class="right-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <!--<li><a href="#"><i class="fa fa-behance"></i></a></li>-->
-              
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <header class="">
-      <nav class="navbar navbar-expand-lg">
-        <div class="containe">
-          <a class="navbar-brand" href="/"><h2>Finance Business</h2></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="/">Home
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <!--<li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="services.html">Our Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
-            
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">SingUp</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Admin</a>
-              </li>-->
+{% extends 'new/general/base.html' %}
+  {% load static %}
+  {% block content %}
 
 
 
-              {% if user.is_authenticated %}
-              <li><a class="nav-link" href="{% url 'loanApp:user_dashboard' %}">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="{% url 'loanApp:user_loan_history' %}">Loan History</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="{% url 'loanApp:loan_payment' %}">Pay Loan</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="{% url 'loanApp:user_transaction' %}">Transactions</a>
-              </li>
-              
-              <li>
-                <a class="nav-link" href="{% url 'loanApp:loan_request'%}">Apply For A Loan</a>
-            </li>
-            <li>
-                <a class="nav-link" href="{% url 'account:edit-customer'%}">Update Info</a>
-            </li>
-
-            <li>
-                <a class="nav-link" href="{% url 'account:logout_customer' %}">Logout</a>
-            </li>
-              {% else %}
-                <li class="nav-item me-2">
-                    <b> <a class="nav-link" href="{% url 'account:login_customer' %}">Login</a></b>
-
-
-                </li>
-                <li class="nav-item">
-                    <b> <a class="nav-link" href="/account/signup-customer">Signup</a></b>
-                </li>
-                <li class="nav-item">
-                    <b> <a class="nav-link" href="{% url 'adminManager:admin-login' %}">Admin</a></b>
-                </li>
-
-                {% endif %}
-
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-  
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="main-banner header-text" id="top">
@@ -163,7 +17,7 @@ https://templatemo.com/tm-545-finance-business
                   <p>We are here to help you finance your immediate projects like boosting your business,hospital bills,paying rent, buying a car,
                     paying school fees, etc.</p>
                     <p>Join the many business owners and workers  we’ve helped turn great ideas into thriving businesses</p>
-                  <a href="contact.html" class="filled-button">contact us</a>
+                  <a href="{% url 'loanApp:contact_us' %}" class="filled-button">contact us</a>
                   <h3>{% for i in abb %}</h3>
                   <h3 style="color: green">{{ i.mydate}}</h3>
                   <h3 style="color: green">{{ i.get_dattime}}</h3>
@@ -480,108 +334,7 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
+{% endblock %}
+  
 
-    <!-- Footer Starts Here -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 footer-item">
-            <h4>Finance Business</h4>
-            <p>Our values: Respect, Integrity, Accountability and Passion.
-            </p>
-          <p>By putting our customers first, we’re helping them be better off today and tomorrow.A purpose-driven team, committed to results in an inclusive and high-performance culture.</p>
-            <ul class="social-icons">
-              <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
-            </ul>
-          </div>
-          <div class="col-md-3 footer-item">
-            <h4>Useful Links</h4>
-            <ul class="menu-list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Our Services</a></li>
-              <li><a href="#">Contact Us</a></li>
-            
-            </ul>
-          </div>
-          <div class="col-md-3 footer-item">
-            <h4>Additional Pages</h4>
-            <ul class="menu-list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Login</a></li>
-              <li><a href="#">Signup</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <!--<li><a href="#">Privacy Policy</a></li>-->
-            </ul>
-          </div>
-          <div class="col-md-3 footer-item last-item">
-            <h4>Contact Us</h4>
-            <div class="contact-form">
-              <form id="contact footer-contact" action="" method="post">
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input name="email" type="text" class="form-control" id="email" pattern="[^ @]*@[^ @]*" placeholder="E-Mail Address" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="filled-button">Send Message</button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-    
-    <div class="sub-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <p>Copyright &copy; 2022 
-            
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">realmindt@gmail.com</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <!-- Additional Scripts -->
-    <script src="{% static 'assets/js/custom.js' %}"></script>
-    <script src="{% static 'assets/js/owl.js' %}"></script>
-    <script src="{% static 'assets/js/slick.js' %}"></script>
-    <script src="{% static 'assets/js/accordions.js' %}"></script>
-
-    <script language = "text/Javascript"> 
-      cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
-      function clearField(t){                   //declaring the array outside of the
-      if(! cleared[t.id]){                      // function makes it static and global
-          cleared[t.id] = 1;  // you could use true and false, but that's more typing
-          t.value='';         // with more chance of typos
-          t.style.color='#fff';
-          }
-      }
-    </script>
-
-  </body>
-</html>
