--- a/templates/new/general/index.html
+++ b/templates/new/general/index.html
@@ -43,7 +43,7 @@
                     <li>Borrow up to your business’ credit limit </li>
                     <li>Earn rewards each time you spend  </li>
                   </ul>
-                  <a href="services.html" class="filled-button">our services</a>
+                  <a href="{% url 'loanApp:services' %}" class="filled-button">our services</a>
                 </div>
             </div>
           </div>
@@ -76,7 +76,7 @@
             <span>We are one call away from getting the funds you desire.</span>
           </div>
           <div class="col-md-4">
-            <a href="contact.html" class="border-button">Contact Us</a>
+            <a href="{% url 'loanApp:contact_us' %}" class="border-button">Contact Us</a>
           </div>
         </div>
       </div>
@@ -202,59 +202,7 @@
       </div>
     </div>
 
-    <!--<div class="testimonials">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>What they say <em>about us</em></h2>
-              <span>testimonials from our greatest clients</span>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="owl-testimonials owl-carousel">
-              
-              <div class="testimonial-item">
-                <div class="inner-content">
-                  <h4>George Walker</h4>
-                  <span>Chief Financial Analyst</span>
-                  <p>"Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo sem sit amet quam. Pellentesque in sagittis lacus."</p>
-                </div>
-                <img src="http://placehold.it/60x60" alt="">
-              </div>
-              
-              <div class="testimonial-item">
-                <div class="inner-content">
-                  <h4>John Smith</h4>
-                  <span>Market Specialist</span>
-                  <p>"In eget leo ante. Sed nibh leo, laoreet accumsan euismod quis, scelerisque a nunc. Mauris accumsan, arcu id ornare malesuada, est nulla luctus nisi."</p>
-                </div>
-                <img src="http://placehold.it/60x60" alt="">
-              </div>
-              
-              <div class="testimonial-item">
-                <div class="inner-content">
-                  <h4>David Wood</h4>
-                  <span>Chief Accountant</span>
-                  <p>"Ut ultricies maximus turpis, in sollicitudin ligula posuere vel. Donec finibus maximus neque, vitae egestas quam imperdiet nec. Proin nec mauris eu tortor consectetur tristique."</p>
-                </div>
-                <img src="http://placehold.it/60x60" alt="">
-              </div>
-              
-              <div class="testimonial-item">
-                <div class="inner-content">
-                  <h4>Andrew Boom</h4>
-                  <span>Marketing Head</span>
-                  <p>"Curabitur sollicitudin, tortor at suscipit volutpat, nisi arcu aliquet dui, vitae semper sem turpis quis libero. Quisque vulputate lacinia nisl ac lobortis."</p>
-                </div>
-                <img src="http://placehold.it/60x60" alt="">
-              </div>
-              
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>-->
+   
 
     <div class="callback-form">
       <div class="container">
@@ -304,33 +252,7 @@
 
     <div class="partners">
       <div class="container">
-        <!--<div class="row">
-          <div class="col-md-12">
-            <div class="owl-partners owl-carousel">
-            
-              <div class="partner-item">
-                <img src="{% static 'assets/images/client-01.png' %}" title="1" alt="1">
-              </div>
-              
-              <div class="partner-item">
-                <img src="{% static 'assets/images/client-01.png' %}" title="2" alt="2">
-              </div>
-              
-              <div class="partner-item">
-                <img src="{% static 'assets/images/client-01.png' %}" title="3" alt="3">
-              </div>
-              
-              <div class="partner-item">
-                <img src="{% static 'assets/images/client-01.png' %}" title="4" alt="4">
-              </div>
-              
-              <div class="partner-item">
-                <img src="{% static 'assets/images/client-01.png' %}" title="5" alt="5">
-              </div>
-              
-            </div>
-          </div>
-        </div>-->
+       
       </div>
     </div>
 
