--- a/templates/loginApp/log.html
+++ b/templates/loginApp/log.html
@@ -1,41 +1,27 @@
 
-{% extends 'new/general/base.html' %}
-  {% load static %}
 
-  {% block title_block %}
-  AdminUser Login
-  {% endblock %}
 
-  {% block content %}
-  {% load widget_tweaks %}
 
-  <style>
-    .page-heading{
-        height: 150px;
-    }
-  
-  </style>
 
-  <div class="page-heading header-text">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Admin signup  page</h1>
-          <span></span>
-        </div>
-      </div>
-    </div>
-  </div>
+
+  {% extends 'new/general/base.html' %}
+{% load widget_tweaks %}
+{% load static %}
+
+{% block title_block %}
+User Login
+{% endblock %}
+
+
+{% block content %}
+
+
 <div class="container my-5">
 
     <div class="row">
         <div class="p-5 m-auto rounded shadow-lg col-md-4 bg-body">
-            <h3 class="text-center text-success">Admin Login</h3>
-            </h3>
+            <h3 class="text-center text-success">{{user}} </h3>
             <form method="POST" class="my-5">
-
-                {% csrf_token %}
-
                 {% if error %}
                 <div class="my-2">
                     <div class="row">
@@ -47,6 +33,9 @@
                     </div>
                 </div>
                 {% endif %}
+
+                {% csrf_token %}
+
 
 
                 <div class="mb-4 form-outline">
@@ -79,25 +68,25 @@
                 </div>
 
                 <!-- Submit button -->
-                <button type="submit" class="mb-4 btn btn-primary btn-block">Sign in</button>
+                <button type="submit" class="mb-4 btn btn-success btn-block">Sign in</button>
 
                 <!-- Register buttons -->
                 <div class="text-center">
-                    <!-- <p>Not a member? <a href="/account/signup-customer">Register</a></p> -->
-                    <!-- <p>or sign up with:</p> -->
-                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                    <p>Not a member? <a href="/account/signup-customer">Register</a></p>
+                    <p>or sign up with:</p>
+                    <button type="button" class="mx-1 btn btn-success btn-floating">
                         <i class="fab fa-facebook-f"></i>
                     </button>
 
-                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                    <button type="button" class="mx-1 btn btn-success btn-floating">
                         <i class="fab fa-google"></i>
                     </button>
 
-                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                    <button type="button" class="mx-1 btn btn-success btn-floating">
                         <i class="fab fa-twitter"></i>
                     </button>
 
-                    <button type="button" class="mx-1 btn btn-primary btn-floating">
+                    <button type="button" class="mx-1 btn btn-success btn-floating">
                         <i class="fab fa-github"></i>
                     </button>
                 </div>
